[refactor] replace ternary operators